Updated the docker file